addons/eda-playground/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eda-playground
  namespace: eda-playground
  labels:
    app: eda-playground
    app.kubernetes.io/name: eda-playground
    app.kubernetes.io/component: web
spec:
  host: eda-playground.apps.127.0.0.1.nip.io
  to:
    kind: Service
    name: eda-playground
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
